--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,9 +6,17 @@
 
 	<display-name>spring-mvc-demo</display-name>
 
-	<!-- Spring MVC Configs -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/music-store-mvc-context.xml,
+			/WEB-INF/applicationContext.xml
+		</param-value>
+	</context-param>
 
-	<!-- Step 1: Configure Spring MVC Dispatcher Servlet -->
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -19,7 +27,6 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-	<!-- Step 2: Set up URL mapping for Spring MVC Dispatcher Servlet -->
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
