--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.framework.version>4.3.22.RELEASE</spring.framework.version>
-        <spring.security.version>4.2.11.RELEASE</spring.security.version>
+        <spring.framework.version>5.1.3.RELEASE</spring.framework.version>
+        <spring.security.version>5.1.2.RELEASE</spring.security.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
@@ -26,6 +26,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
+            <version>${spring.framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
             <version>${spring.framework.version}</version>
         </dependency>
 
