database schema and hibernate entities changed

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 		<param-value>
 			/WEB-INF/music-store-mvc-context.xml
 			/WEB-INF/spring-security.xml
-			<!--/WEB-INF/dump-loader.xml-->
+			/WEB-INF/dump-loader.xml
 		</param-value>
 	</context-param>
 
